<resources>
    <string name="app_name">at_interfaces</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="informa_es_pessoais">Informações Pessoais</string>
    <string name="forma_o">Formação</string>
    <string name="experi_ncia_profissional">Experiência Profissional</string>
    <string name="cursos">Cursos</string>
    <string name="publica_es">Publicações</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="endere_o">Endereço</string>
    <string name="e_mail">E-mail</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="camila_nunes_de_castro_cerqueira">Camila Nunes de Castro Cerqueira</string>
    <string name="juiz_de_fora_mg">Juiz de Fora - MG</string>
    <string name="hobby">Hobby:</string>
    <string name="gatos_s_ries_e_cerveja">Gatos, Séries e Cerveja</string>
    <string name="idade">Idade:</string>
    <string name="_32">32</string>
    <string name="sobre_mim">Sobre mim:</string>
    <string name="entusiasta_em_tecnologias_e_no_processo_de_comunica_o_experi_ncia_com_suporte_a_softwares_educacionais_coordena_o_de_polo_ead_tutoria_treinamentos_tecnologias_de_aprendizagem_e_sistemas_educacionais_amante_de_desafios_que_englobam_tecnologia_comunica_o_e_pessoas">Entusiasta em tecnologias e no processo de comunicação. Experiência com suporte a softwares educacionais, coordenação de polo EAD, tutoria, treinamentos, tecnologias de aprendizagem e sistemas educacionais. Amante de desafios que englobam tecnologia, comunicação e pessoas.</string>
    <string name="capelo_de_gradua_o">Capelo de graduação</string>
    <string name="gradua_o">Graduação:</string>
    <string name="textview">TextView</string>
    <string name="universidade_federal_de_juiz_de_fora_comunica_o_social_2009_2014">Universidade Federal de Juiz de Fora - Comunicação Social - 2009-2014</string>
    <string name="intituto_infnet_an_lise_e_desenvolvimento_de_sistemas_2021_2024">Intituto Infnet - Análise e Desenvolvimento de Sistemas 2021-2024</string>
    <string name="universidade_castelo_branco_marketing_2009_2013">Universidade Castelo Branco - Marketing - 2009-2013</string>
    <string name="p_s_gradua_o">Pós-Graduação</string>
    <string name="centro_universit_rio_bar_o_de_mau_tecnologias_de_educa_o_a_dist_ncia_2016_2017">Centro Universitário Barão de Mauá - Tecnologias de Educação a Distância - 2016-2017</string>
    <string name="centro_universit_rio_bar_o_de_mau_comunica_o_e_informa_o_educacional_e_empresarial_2014_2015">Centro Universitário Barão de Mauá - Comunicação e Informação Educacional e Empresarial - 2014-2015</string>
    <string name="cone_curriculo">ícone curriculo</string>
    <string name="universidade_do_sul_de_santa_catarina_l_der_de_rea_i_a_2014_present_7_anos_11_meses">Universidade do Sul de Santa Catarina Líder de Área I A - 2014 - Present (7 anos 11 meses)</string>
    <string name="cecon_rede_de_ensino_suporte_pedag_gico_e_sistemas_educacionais_2019_2022">CECON Rede de Ensino - Suporte Pedagógico e Sistemas Educacionais - 2019-2022</string>
    <string name="cecon_rede_de_ensino_tutora_ensino_t_cnico_2019_2021">CECON Rede de Ensino - Tutora Ensino Técnico - 2019-2021</string>
    <string name="cecon_rede_de_ensino_auxiliar_de_secretaria_pedag_gica_2014_2018">CECON Rede de Ensino - Auxiliar de secretaria pedagógica - 2014-2018</string>
    <string name="cone_livro_com_l_pis">ícone livro com lápis</string>
    <string name="desenvolvimento_gil_devops_git">Desenvolvimento Ágil - DevOps Git</string>
    <string name="introdu_o_ao_git_e_ao_github">Introdução ao Git e ao GitHub</string>
    <string name="t_picos_de_ux_para_design_de_servi_os">Tópicos de UX para Design de Serviços</string>
    <string name="consultando_bases_sql_com_python">Consultando bases SQL com Python</string>
    <string name="scrum_overview">SCRUM Overview</string>
    <string name="android_push_notification_com_firebase">Android: Push Notification com Firebase</string>
    <string name="android_banco_de_dados_com_android_room">Android - Banco de Dados com Android Room</string>
    <string name="android_gps_com_google_maps">Android: GPS com Google Maps</string>
    <string name="projetos_geis_com_scrum">Projetos ágeis com SCRUM</string>
    <string name="cone_de_livros">ícone de livros</string>
    <string name="cerqueira_camila_n_c_educa_o_no_ciberespa_o_as_potencialidades_do_ensino_a_dist_ncia_na_era_da_converg_ncia_midi_tica_2015_monografia_aperfei_oamento_especializa_o_em_comunica_o_e_informa_o_educacional_e_empresarial_centro_universit_rio_bar_o_de_mau_jardim_paulista">CERQUEIRA, Camila N. C.. Educação no Ciberespaço: as potencialidades do Ensino a Distância na era da convergência midiática. 2015. Monografia (Aperfeiçoamento/Especialização em Comunicação e Informação Educacional e Empresarial) - Centro Universitário Barão de Mauá - Jardim Paulista.</string>
    <string name="cerqueira_camila_n_c_jornalismo_de_revista_um_estudo_explorat_rio_sobre_os_efeitos_da_converg_ncia_midi_tica_em_veja_e_poca_2014_trabalho_de_conclus_o_de_curso_gradua_o_em_comunica_o_social_universidade_federal_de_juiz_de_fora">CERQUEIRA, Camila N. C.. Jornalismo de revista: Um estudo exploratório sobre os efeitos da convergência midiática em Veja e Época. 2014. Trabalho de Conclusão de Curso (Graduação em Comunicação Social) - Universidade Federal de Juiz de Fora.</string>
</resources>